--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "symfony/options-resolver": "~2.8 || ~3.0",
         "symfony-cmf/slugifier-api": "~1.0",
         "ocramius/proxy-manager": "~1.0 | ~2.0",
-        "aferrandini/urlizer": "~1.0.0"
+        "behat/transliterator": "^1.2.0"
     },
     "require-dev": {
         "jackalope/jackalope-doctrine-dbal": "~1.2.3",
